S901/p3/y.output
Rules useless in parser due to conflicts

    5 B: a


State 1 conflicts: 1 reduce/reduce


Grammar

    0 $accept: command $end

    1 command: S

    2 S: A
    3  | B

    4 A: a

    5 B: a


Terminals, with rules where they appear

$end (0) 0
error (256)
a (258) 4 5


Nonterminals, with rules where they appear

$accept (4)
    on left: 0
command (5)
    on left: 1, on right: 0
S (6)
    on left: 2 3, on right: 1
A (7)
    on left: 4, on right: 2
B (8)
    on left: 5, on right: 3


State 0

    0 $accept: . command $end

    a  shift, and go to state 1

    command  go to state 2
    S        go to state 3
    A        go to state 4
    B        go to state 5


State 1

    4 A: a .
    5 B: a .

    $end      reduce using rule 4 (A)
    $end      [reduce using rule 5 (B)]
    $default  reduce using rule 4 (A)


State 2

    0 $accept: command . $end

    $end  shift, and go to state 6


State 3

    1 command: S .

    $default  reduce using rule 1 (command)


State 4

    2 S: A .

    $default  reduce using rule 2 (S)


State 5

    3 S: B .

    $default  reduce using rule 3 (S)


State 6

    0 $accept: command $end .

    $default  accept
